Implement endpoint for validate token
